--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body class="work-sans-normal">
-    <header class="header">
+    <header class="header sec-bg">
         <nav>
             <h1 class="nav-title">Ma<span class="text-primary">r</span>y</h1>
             <ul>
@@ -27,10 +27,11 @@
             <div class="banner-container">
                 <h3 class="banner-greetings" class="dark-2">Hi, I am</h3>
                 <h1 class="banner-title">Mary Hardy</h1>
-                <p class="banner-discription" class="dark-3">Shot what able cold new see hold.Friendly as an betrayed formerly he.
+                <p class="banner-discription" class="dark-3">Shot what able cold new see hold.Friendly as an betrayed
+                    formerly he.
                     Morning because as to society behaved moments.</p>
-                    <button class="btn-primary">Download CV</button>
-                    <button class="btn-primary">Contact</button>
+                <button class="btn-primary">Download CV</button>
+                <button class="btn-primary">Contact</button>
 
             </div>
             <img class="banner-propic" src="images/hardy.png" alt="hardy">
@@ -39,6 +40,36 @@
     </header>
 
     <main>
+        <section class="about sec-bg">
+            <h3 class="section-title">About Me</h3>
+            <p class="section-discription">I, m a designer & developer with a passion for web design. I enjoy developing
+                simple, clean and slick websites that provide real value to the end user. Thousands of clients have
+                procured exceptional resulfs while working with me. Delivering work within time and budget which meets
+                clients requirements in our mata.</p>
+
+            <div class="about-items">
+                <div class="about-item">
+                    <p class="item-title">Name:</p>
+                    <p class="item-description">Mary Hardy</p>
+                </div>
+                <div class="about-item">
+                    <p class="item-title">Email:</p>
+                    <p class="item-description">abc@def.com</p>
+                </div>
+                <div class="about-item">
+                    <p class="item-title">Date of Birth:</p>
+                    <p class="item-description">24 june, 2001</p>
+                </div>
+                <div class="about-item">
+                    <p class="item-title">Address:</p>
+                    <p class="item-description">Sylhet,BD</p>
+                </div>
+
+
+            </div>
+
+
+        </section>
 
     </main>
     <footer>
